# AI-company

./: .gitignore  .mcp.json.example  .replit  CHANGELOG.md  CLAUDE.md  Dockerfile  QUICKSTART.md  README.md  README.zh-CN.md  coordination.md  docker-compose.full.yml  install.py  pyproject.toml  replit.md
.claude/: settings.json.example
.claude-plugin/: marketplace.json
.claude/agents/: engineering-backend-architect.md  engineering-code-reviewer.md  engineering-database-optimizer.md  engineering-devops-automator.md  engineering-frontend-developer.md  engineering-git-workflow-master.md  engineering-mcp-builder.md  engineering-mobile-developer.md  engineering-rapid-prototyper.md  engineering-software-architect.md  engineering-sre.md  management-project-manager.md  management-tech-lead.md  specialized-workflow-architect.md  support-meeting-facilitator.md  support-technical-writer.md  testing-api-tester.md  testing-bug-fixer.md  testing-performance-benchmarker.md  testing-qa-engineer.md
.claude/hooks/: inject-context.ps1
dashboard/: vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/api/: activities.ts  analytics.ts  client.ts  decisions.ts  projects.ts  tasks.ts
dashboard/src/i18n/: en.ts  index.ts  zh.ts
dashboard/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  EventsPage.tsx  MeetingDetailPage.tsx  MeetingsPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  SettingsPage.tsx  TasksPage.tsx  TeamDetailPage.tsx
dashboard/src/types/: index.ts
docs/: README.md  api-contracts.md  architecture.md  dept-naming-validation.md  growth-hacking-research.md  launch-post-final.md  marketing-copy-pack.md  mcp-tools-reference.md  meeting-templates-design.md  opensource-readiness-checklist.md  os-rule-system-design.md  partner-network-detailed-research.md  simplified-tools-design.md  system-integration-audit.md
docs/design/: plugin-distribution-architecture.md
plugin/: .mcp.json  bootstrap.py
plugin/.claude-plugin/: plugin.json
plugin/agents/: engineering-frontend-developer.md
plugin/config/: agent-prompt-template.md  team-defaults.json
plugin/hooks/: context_monitor.py  hooks.json  inject_context.py  inject_subagent_context.py  pre_compact_save.py  send_event.py  session_bootstrap.py  statusline.py  sync_rules.py  workflow_reminder.py
plugin/skills/os-register/: SKILL.md
scripts/: gen_tool_docs.py
src/aiteam/: __init__.py  types.py
src/aiteam/api/: app.py  deps.py  event_bus.py  hook_translator.py  schemas.py  state_reaper.py
src/aiteam/cli/: app.py  display.py  manager.py
src/aiteam/config/: settings.py
src/aiteam/hooks/: install.py
src/aiteam/loop/: auto_assign.py  engine.py  failure_alchemy.py  pipeline.py  watchdog.py  what_if.py
src/aiteam/mcp/: server.py
src/aiteam/memory/: __init__.py  recovery.py  retriever.py  store.py
tests/: conftest.py  e2e_api_coverage.py  e2e_dashboard_coverage.py  test_api_comprehensive.py
tests/unit/: test_agent_check.py  test_analytics.py  test_approval.py  test_broadcast.py  test_cli.py  test_config.py  test_connection.py  test_context_scripts.py  test_db_path.py  test_mcp_autostart.py  test_memory.py  test_memory_backends.py  test_orchestrator.py  test_pipeline.py  test_storage.py  test_supervisor_hooks.py  test_team_config.py  test_team_mapping.py  test_workflow_reminders.py
(+45 files in other folders)
